src/ui/layout/overlay/snapshots/kvn_tui__ui__layout__overlay__settings_menu__tests__draw_interface_menu_snapshot.snap
---
source: src/ui/layout/overlay/settings_menu.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                       ┌───────────────────────────────┐                                       │
│                                       │     Settings › Interface      │                                       │
│                                       │                               │                                       │
│                                       │   Theme ‹ tokyo-night ›       │                                       │
│                                       │   Icons ‹ nerd ›              │                                       │
│                                       │                               │                                       │
│                                       │ 󰌑 apply · q/󱊷 close · ⌫ back  │                                       │
│                                       └───────────────────────────────┘                                       │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                                         DoH  Global
[113x35]
